# aoc2023

./: .bandit  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  gen-badges.sh  pylintrc  pyproject.toml
.github/: pull_request_template.md
.github/actions/ci-setup-python/: action.yml
.github/workflows/: ci-tests-python.yml
aoc2023/: __init__.py  __main__.py  app.py
aoc2023/common/: file_load.py
aoc2023/day1/: problems.py
aoc2023/day2/: problems.py
aoc2023/problems/: __init__.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
aoc2023/utils/: logging_utils.py  timing_utils.py
docs/: README.md
reports/coverage/: cov.lcov  cov.xml
reports/flake8/: flake8stats.txt  index.html
reports/junit/: html-test-report.html  junit-test-report.xml
tests/: __init__.py  test_day_1_solution.py  test_day_2_solution.py  test_dummy.py
tests/common/: test_load_file.py
tests/day1/: __init__.py
tests/problems/: __init__.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
