[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023 daily programming challenge, christmas themed"
authors = ["Andrés Ferreiro González <andresoferreiro@gmail.com>"]
readme = "README.md"
license="Apache-2"
packages = [{include = "aoc2023"}]

[tool.poetry.dependencies]
loguru = "^0.6.0"
python = "^3.10.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.6.0"
coverage = "^7.2.3"
flake8 = "^6.0.0"
hypothesis = "^6.72.4"
ipython = "^8.12.0"
isort = "^5.12.0"
pdoc = "^12.0.2"
pep8 = "^1.7.1"
pre-commit = "^2.20.0"
pyflakes = "^3.0.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
rope = "^1.3.0"
semgrep = "^1.19.0"
vulture = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
